[#14297] Reproducible builds
* Use git commit timestamp for all files
* Sort classes/constructors/methods in graalvm features